path issue fixed

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/app/scss/style.css">   
+  <link rel="stylesheet" href="./app/scss/style.css">   
   <title>Fylo landing page with dark theme and features grid</title>  
 </head>
 <body>
   <div class="intro">
     <nav class="container">
       <div class="logo">
-        <a href="#"><img src="/images/logo.svg" alt="logo"></a>
+        <a href="#"><img src="./images/logo.svg" alt="logo"></a>
       </div>
       <div class="menu">
         <ul>
@@ -24,7 +24,7 @@
     </nav>
     <div class="hero">
       <div class="image">
-        <img src="/images/illustration-intro.png" alt="illustration">
+        <img src="./images/illustration-intro.png" alt="illustration">
       </div>
       <h2>
         All your files in one secure location, accessible anywhere.
@@ -40,7 +40,7 @@
   </div>
 
   <main>
-    
+
   </main>
   
   
