--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./app/scss/style.css">   
   <title>Fylo landing page with dark theme and features grid</title>  
 </head>
@@ -33,87 +34,208 @@
         Fylo stores all your most important files in one secure location. Access them wherever 
         you need, share and collaborate with friends family, and co-workers.
       </p>
-      <button>
+      <button class="button">
         Get Started
       </button>
     </div>    
   </div>
 
   <main>
+    <div class="features">
+      <div class="feature-item">
+         <div class="image">
+          <img src="./images/icon-access-anywhere.svg" alt="access icon">
+         </div>
+         <h3>
+          Access your files, anywhere
+         </h3>
+         <p>
+          The ability to use a smartphone, tablet, or computer to access your account means your 
+          files follow you everywhere.
+         </p>
+      </div>
+      <div class="feature-item">
+         <div class="image">
+          <img src="./images/icon-security.svg" alt="security">
+         </div>
+         <h3>
+          Security you can trust
+         </h3>
+         <p>
+          2-factor authentication and user-controlled encryption are just a couple of the security 
+          features we allow to help secure your files.
+         </p>
+      </div>
+      <div class="feature-item">
+         <div class="image">
+            <img src="./images/icon-collaboration.svg" alt="collaboration">
+         </div>
+         <h3>
+          Real-time collaboration
+         </h3>
+         <p>
+          Securely share files and folders with friends, family and colleagues for live collaboration. 
+          No email attachments required.
+         </p>
+      </div>
+      <div class="feature-item">
+         <div class="image">
+          <img src="./images/icon-any-file.svg" alt="Store">
+         </div>
+         <h3>
+          Store any type of file
+         </h3>
+         <p>
+          Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
+          file types to be securely stored and shared.
+         </p>
+      </div>     
+    </div>
+    <div class="productive">
+      <div class="image">
+        <img src="./images/illustration-stay-productive.png" alt="illustration">
+      </div>
+      <div class="description">
+        <h2>Stay productive, wherever you are</h2>
+        <p>
+          Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
+          storage needs.<br><br>
 
+          Securely share files and folders with friends, family and colleagues for live collaboration. No email 
+          attachments required.
+        </p>  
+        <a href="#" target="_blank" rel="noopener noreferrer"><p>See how Fylo works </p><svg width="16" height="16" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><circle id="b" cx="6" cy="6" r="6"/><filter x="-25%" y="-25%" width="150%" height="150%" filterUnits="objectBoundingBox" id="a"><feOffset in="SourceAlpha" result="shadowOffsetOuter1"/><feGaussianBlur stdDeviation="1" in="shadowOffsetOuter1" result="shadowBlurOuter1"/><feColorMatrix values="0 0 0 0 0.384313725 0 0 0 0 0.878431373 0 0 0 0 0.850980392 0 0 0 0.811141304 0" in="shadowBlurOuter1"/></filter></defs><g fill="none" fill-rule="evenodd"><g transform="translate(2 2)"><use fill="#000" filter="url(#a)" xlink:href="#b"/><use fill="#62E0D9" xlink:href="#b"/></g><path d="M8.582 6l-.363.35 1.452 1.4H5.333v.5h4.338L8.22 9.65l.363.35 2.074-2z" fill="#1B2330"/></g></svg></a>
+      </div>
+    </div>
+    
+    <div class="testimonial-section">
+      <img class="quote" src="./images/bg-quotes.png" alt="quotes">
+      <div class="testimonials">
+        <div class="testimonial-1">     
+          <div class="text">
+            <p>
+              Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+              become a well-oiled collaboration machine.
+            </p>
+          </div>
+          <div class="profile">
+            <div class="image">
+              <img src="./images/profile-1.jpg" alt="profie">
+            </div>
+            <div class="name">
+              <h5>
+                Satish Patel
+              </h5>
+              <p>
+                Founder & CEO, Huddle
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="testimonial-2">
+          <div class="text">
+            <p>
+              Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+              become a well-oiled collaboration machine.
+            </p>
+          </div>
+          <div class="profile">
+            <div class="image">
+              <img src="./images/profile-2.jpg" alt="profie">
+            </div>
+            <div class="name">
+              <h5>
+                Bruce McKenzie
+              </h5>
+              <p>
+                Founder & CEO, Huddle
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="testimonial-3">
+          <div class="text">
+            <p>
+              Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+              become a well-oiled collaboration machine.
+            </p>
+          </div>
+          <div class="profile">
+            <div class="image">
+              <img src="./images/profile-3.jpg" alt="profie">
+            </div>
+            <div class="name">
+              <h5>
+                Iva Boyd
+              </h5>
+              <p>
+                Founder & CEO, Huddle
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>       
+    </div>
+    
+    <div class="access">
+      <h2>
+        Get early access today
+      </h2>
+      <p>
+        It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
+        questions, our support team would be happy to help you.
+      </p>
+
+      <form action="" id="form">
+        <input id="email" type="email" name="email" placeholder="email@example.com">  
+        <button class="button">
+          Get Started
+        </button>
+      </form>
+    </div>
   </main>
+
+  <footer class="footer">
+    <div class="container">
+
+      <div class="logo">
+        <img src="./images/logo.svg" alt="Logo">
+      </div>
   
-  
-  
-
-  Access your files, anywhere
-
-  The ability to use a smartphone, tablet, or computer to access your account means your 
-  files follow you everywhere.
-
-  Security you can trust
-
-  2-factor authentication and user-controlled encryption are just a couple of the security 
-  features we allow to help secure your files.
-
-  Real-time collaboration
-
-  Securely share files and folders with friends, family and colleagues for live collaboration. 
-  No email attachments required.
-
-  Store any type of file
-
-  Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
-  file types to be securely stored and shared.
-
-  Stay productive, wherever you are
-
-  Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
-  storage needs.
-
-  Securely share files and folders with friends, family and colleagues for live collaboration. No email 
-  attachments required.
-
-  See how Fylo works
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Satish Patel
-  Founder & CEO, Huddle
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Bruce McKenzie
-  Founder & CEO, Huddle
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Iva Boyd
-  Founder & CEO, Huddle
-
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
-  questions, our support team would be happy to help you.
-
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-  dolore magna aliqua
-
-  +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
+      <div class="contact-links">
+        <div class="location">
+          <img src="./images/icon-location.svg" alt="location">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+            dolore magna aliqua        
+          </p>        
+        </div>
+        <div class="phoneEmail">
+          <div class="phone">
+            <img src="./images/icon-phone.svg" alt="phone">+1-543-123-4567
+          </div>
+          <div class="email">
+            <img src="./images/icon-email.svg" alt="email">example@fylo.com
+          </div>
+        </div>
+        <div class="links-1">
+          <a href="#">About Us</a>
+          <a href="#">Jobs</a>
+          <a href="#">Press</a>
+          <a href="#">Blog</a>
+        </div>
+        <div class="links-2">
+          <a href="#">Contact Us</a>
+          <a href="#">Terms</a>
+          <a href="#">Privacy</a>
+        </div>
+        <div class="links-social">
+          <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter"></i></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
+  </footer>  
 </body>
 </html>
