--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./app/scss/style.css">   
-  <title>Fylo landing page with dark theme and features grid</title>  
+  <title>Fylo landing page with dark theme and features grid</title>
+  <script defer src="./app/js/script.js"></script>  
 </head>
 <body>
   <div class="intro">
@@ -187,8 +188,11 @@
       </p>
 
       <form action="" id="form">
-        <input id="email" type="email" name="email" placeholder="email@example.com">  
-        <button class="button">
+        <div>
+          <input id="email" type="email" name="email" placeholder="email@example.com">
+          <div id="errorMessage"></div>  
+        </div>
+        <button type="submit" class="button">
           Get Started
         </button>
       </form>
