--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <form action="" id="form">
         <div>
           <input id="email" type="email" name="email" placeholder="email@example.com">
-          <div id="errorMessage"></div>  
+          <div id="errorMessage" class="errorMessage">Please enter a valid email address.</div>  
         </div>
         <button type="submit" class="button">
           Get Started
