--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         questions, our support team would be happy to help you.
       </p>
 
-      <form action="" id="form">
+      <form id="form">
         <div>
           <input id="email" type="email" name="email" placeholder="email@example.com">
           <div id="errorMessage" class="errorMessage">Please enter a valid email address.</div>  
