--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
           <a href="">Privacy</a>
         </div>
         <div class="links-social">
-          <a href=""><i class="fa-brands fa-facebook-f"></i></a>
-          <a href=""><i class="fa-brands fa-twitter"></i></i></a>
-          <a href=""><i class="fa-brands fa-instagram"></i></a>
+          <a href="" aria-label="facebook"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="" aria-label="twitter" ><i class="fa-brands fa-twitter"></i></i></a>
+          <a href="" aria-label="instagram"><i class="fa-brands fa-instagram"></i></a>
         </div>
       </div>
     </div>
