--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>    
   </div>
 
-  <main>
+  <div class="main">
     <div class="features">
       <div class="feature-item">
          <div class="image">
@@ -197,7 +197,7 @@
         </button>
       </form>
     </div>
-  </main>
+  </div>
 
   <footer class="footer">
     <div class="container">
