--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <img src="./images/illustration-intro.png" alt="illustration">
         </div>
         <h1>
-          All your files in one secure location, accessible anywhere.
+          Hello world, All your files in one secure location, accessible anywhere.
         </h1>
         <p>
           Fylo stores all your most important files in one secure location. Access them wherever 
