--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="./app/scss/style.css">   
+  <link rel="stylesheet" href="./app/Css/style.css">   
   <title>Fylo landing page with dark theme and features grid</title>
   <script defer src="./app/js/script.js"></script>  
 </head>
 <body>
   <main>
     <div class="intro">
-      <nav class="container">
+      <nav>
         <div class="logo">
           <a href=""><img src="./images/logo.svg" alt="logo"></a>
         </div>
@@ -30,7 +30,7 @@
           <img src="./images/illustration-intro.png" alt="illustration">
         </div>
         <h1>
-          Hello world, All your files in one secure location, accessible anywhere.
+          All your files in one secure location, accessible anywhere.
         </h1>
         <p>
           Fylo stores all your most important files in one secure location. Access them wherever 
